typescript/checker/tests/conformance/es6/templates/templateStringInDeleteExpressionES6.ts.stderr
error: TS2703
 --> $DIR/tests/conformance/es6/templates/templateStringInDeleteExpressionES6.ts:2:8
  |
2 | delete `abc${0}abc`;
  |        ^^^^^^^^^^^^

